Logtalk/examples/errors/invclause.lgt

:- object(invclause).


	1234 :-
		write(hello).


:- end_object.
